<resources>
    <string name="app_name">Manga Checklists</string>
    <string name="app_version">v1.3.0</string>
    <string name="app_github">https://github.com/alessandrojean/manga-checklists</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="send">Enviar</string>

    <!-- Actions -->
    <string name="action_want">Quero</string>
    <string name="action_information">Informações</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_try_again">Tentar novamente</string>
    <string name="action_download">Download</string>
    <string name="action_install">Instalar</string>
    <string name="action_cancel">Cancelar</string>

    <string name="action_filter_jbc">Editora JBC</string>
    <string name="action_filter_panini">Panini Comics</string>
    <string name="action_filter_newpop">NewPOP Editora</string>

    <string name="nav_checklists">Checklists</string>
    <string name="nav_plans">Assinaturas</string>
    <string name="nav_settings">Configurações</string>
    <string name="nav_about">Sobre</string>

    <string name="preference_details_plan_title">Detalhes nas assinaturas</string>
    <string name="preference_details_plan_summary">
        Não recomendado, são muitas requisições
        e você pode ter seu IP banido temporariamente.
    </string>
    <string name="preference_build_date_title">Data de compilação</string>
    <string name="preference_version_title">Versão</string>
    <string name="preference_github_title">GitHub</string>
    <string name="preference_github_summary">http://github.com/alessandrojean/manga-checklists</string>
    <string name="preference_notifications_screen_title">Notificações</string>
    <string name="preference_notifications_title">Notificações</string>
    <string name="preference_category_behavior_title">Comportamento</string>
    <string name="preference_category_update_title">Atualizações</string>
    <string name="preference_category_about_title">Sobre</string>
    <string name="preference_automatic_updates_title">Procurar por atualizações</string>
    <string name="preference_automatic_updates_summary">Procurar por atualizações automaticamente.</string>

    <string name="text_empty">Nenhum mangá encontrado.</string>
    <string name="text_error_oops">Oops!</string>
    <string name="text_error_loading">
        Um erro ocorreu na solicitação.\n
        Verifique se você está conectado.
    </string>

    <string name="crash_dialog_title">Manga Checklist finalizou</string>
    <string name="crash_dialog_text">
        Um erro inesperado ocorreu forçando a finalização do aplicativo.
        Por favor, ajude-nos a arrumar isto mandando-nos as informações
        do erro via e-mail.
    </string>
    <string name="crash_dialog_comment_prompt">Você pode adicionar comentários sobre o problema abaixo:</string>

    <!--UpdateCheck Notifications-->
    <string name="update_check_title">Nova atualização disponível!</string>
    <string name="update_check_confirm">Fazer download</string>
    <string name="update_check_ignore">Ignorar</string>
    <string name="update_check_no_new_updates">Sem atualizações disponíveis.</string>
    <string name="update_check_download_started">Download iniciado.</string>
    <string name="update_check_look_for_updates">Procurando por atualizações.</string>

    <string name="update_check_notification_file_download">Fazer download da atualização</string>
    <string name="update_check_notification_download_in_progress">Download em progresso.</string>
    <string name="update_check_notification_download_complete">Download concluído.</string>
    <string name="update_check_notification_download_error">Erro ao fazer download.</string>
    <string name="update_check_notification_update_available">Atualização disponível.</string>

    <!-- Notification channels -->
    <string name="channel_common">Comum</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Fechar navigation drawer</string>
    <string name="title_activity_manga_details">MangaDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
