<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_category_behavior_title" >

        <android.support.v7.preference.CheckBoxPreference
            android:key="preference_details_plan"
            android:title="@string/preference_details_plan_title"
            android:summary="@string/preference_details_plan_summary"
            android:defaultValue="false" />

        <android.support.v7.preference.PreferenceScreen
            android:key="preference_notifications_screen"
            android:title="@string/preference_notifications_screen_title"
            android:enabled="false"
            android:persistent="false" >

            <android.support.v7.preference.CheckBoxPreference
                android:key="preference_notifications"
                android:title="@string/preference_notifications_title" />

        </android.support.v7.preference.PreferenceScreen>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_category_about_title">

        <android.support.v7.preference.Preference
            android:key="preference_github"
            android:title="@string/preference_github_title"
            android:summary="@string/preference_github_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/preference_github_summary" />

        </android.support.v7.preference.Preference>

        <android.support.v7.preference.Preference
            android:key="preference_version"
            android:title="@string/preference_version_title" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>