<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_white_24dp"
        app:showAsAction="always">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_filter_jbc"
                    android:title="@string/action_filter_jbc"
                    android:checked="true"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_filter_newpop"
                    android:title="@string/action_filter_newpop"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_filter_panini"
                    android:title="@string/action_filter_panini"
                    app:showAsAction="never" />

            </group>

        </menu>

    </item>

</menu>