<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_checkbox_marked_outline_white_24dp"
            android:title="@string/nav_checklists" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_truck_delivery_white_24dp"
            android:title="@string/nav_plans" />
    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="none">

        <item
            android:checkable="false"
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_circle_white_24dp"
            android:title="@string/nav_about" />

    </group>

</menu>