<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="io.github.alessandrojean.mangachecklists.fragment.ChecklistFragment">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layout_content_checklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_empty_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/text_empty"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_checklist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_checklist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_calendar_today_white_24dp" />

    </android.support.design.widget.CoordinatorLayout >

    <RelativeLayout
        android:id="@+id/layout_loading_checklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible" >

        <ProgressBar
            android:id="@+id/progress_bar_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            style="@style/Widget.MaterialProgressBar.ProgressBar"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_error_checklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:id="@+id/text_oops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/text_error_oops"/>

        <TextView
            android:id="@+id/text_info_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_oops"
            android:textAlignment="center"
            android:text="@string/text_error_loading"/>

        <Button
            android:id="@+id/button_try_again_checklist"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_info_error"
            android:layout_centerHorizontal="true"
            android:text="@string/action_try_again" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
